# libcamera-apps-cv

./: .gitignore  README.md
Source/: CMakeLists.txt  install.sh
Source/apps/: CMakeLists.txt  libcamera_raw.cpp  libcamera_vid.cpp
Source/core/: CMakeLists.txt  curves.cpp  curves.hpp  defines.hpp  libcamera_app.cpp  libcamera_app.hpp  libcamera_encoder.cpp  libcamera_encoder.hpp  logging.hpp  options.hpp
Source/encoder/: CMakeLists.txt
Source/post_processing_stages/: CMakeLists.txt
Source/saving_frames/: CMakeLists.txt
Source/saving_frames/BufferPool/: Buffer.cpp  Buffer.hpp  BufferPool.cpp  BufferPool.hpp  CMakeLists.txt
Source/saving_frames/ConcurrentQueue/: CMakeLists.txt  ConcurrentQueue.cpp  ConcurrentQueue.hpp
Source/saving_frames/ReferenceCounter/: CMakeLists.txt  ReferenceCounter.cpp  ReferenceCounter.hpp
Source/saving_frames/Semaphore/: CMakeLists.txt  CountingSemaphore.cpp  CountingSemaphore.h
Source/saving_frames/tests/: CMakeLists.txt
Source/saving_frames/tests/BufferPool/: CMakeLists.txt  tst_BufferPool.cpp
Source/saving_frames/tests/ConcurrentQueue/: CMakeLists.txt  tst_ConcurrentQueue.cpp
Source/saving_frames/tests/SavingToFile/: CMakeLists.txt  tst_SavingToFile.cpp
